fix: remove the minimum width to truncate text on richcombo select
Instead of truncating it will just place the select in a line above of other toolbar elements. See https://github.com/liferay/liferay-ckeditor/pull/195#discussion_r805942072 for further details

It is necessary to make texts like: "Headers: First Column" fit inside richcombo select without truncating and get it readable

--- a/skins/moono-lexicon/richcombo.css
+++ b/skins/moono-lexicon/richcombo.css
@@ -293,7 +293,6 @@ a.cke_combo_button {
 	float: left;
 	cursor: default;
 	color: #6b6c7e; /* $secondary */
-	width: 60px;
 	margin-top: 2px;
 	font-weight: 600;
 }
